--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.13.1",
     "react-event-timeline": "^1.6.3",
     "react-icons": "^3.10.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
