--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-event-timeline": "^1.6.3",
     "react-icons": "^3.10.0",
     "react-lazy-load-image-component": "^1.5.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "sweetalert2": "^10.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
